--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
 
     defaultConfig {
         applicationId = "com.android.keepass"
-        minSdkVersion = 3
-        targetSdkVersion = 12
+        minSdkVersion  10
+        targetSdkVersion  12
         versionCode = 154
         versionName = "2.0.6.4"
 
