--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+    <uses-permission android:name="android.permission.NFC"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+
     <application 
       android:label="@string/app_name"
       android:icon="@drawable/launcher"
@@ -105,6 +108,10 @@
         <activity android:name="com.keepassdroid.GeneratePasswordActivity"
             android:theme="@style/NoTitleBar"></activity>
         <service android:name="com.keepassdroid.services.TimeoutService"></service>
+
+        <activity android:name="com.keepassdroid.mycode.smartcardConnect"
+            android:theme="@android:style/Theme.NoDisplay"></activity>
+
         <meta-data android:name="com.a0soft.gphone.aTrackDog.webURL" android:value="http://keepassdroid.com" />
     </application>
 </manifest> 
