--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,10 +110,11 @@
             android:theme="@style/NoTitleBar"></activity>
         <service android:name="com.keepassdroid.services.TimeoutService"></service>
 
-        <activity android:name="com.keepassdroid.mycode.smartcardConnect"
-            android:theme="@android:style/Theme.NoDisplay"></activity>
+        <activity android:name="com.keepassdroid.smartcardSupport.smartcardConnect"
+            android:theme="@android:style/Theme.NoDisplay"
+            android:screenOrientation="portrait"></activity>
 
-        <service android:name="com.keepassdroid.mycode.backgroundService"
+        <service android:name="com.keepassdroid.smartcardSupport.backgroundService"
             android:launchMode="singleTop">
         </service>
 
